<resources>
    <string name="app_name">codetest1</string>
    <string name="welcome_title">Welcome to\nReady To Travel</string>
    <string name="welcome_text">Sign up with Facebook for the most fulfilling trip planning experience with us!</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_email">Log in with email address</string>
    <string name="register_title_text">Almost there!</string>
    <string name="register_title_body">Complete the form below to create\nyour Ready To Travel account.</string>

    <string name="txtMandatory">*Mandatory</string>
    <string name="txtFirstName">First Name *</string>
    <string name="txtLastName">Last Name *</string>
    <string name="txtEmail">Email Address *</string>
    <string name="txtDob">Date of Birth *</string>
    <string name="txtNationality">Nationality *</string>
    <string name="txtResidence">Country of Residence *</string>
    <string name="txtMobileNo">Mobile no. (Optional)</string>
</resources>